--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,6 +2,17 @@
 # https://firebase.google.com/docs/app-hosting/configure
 
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
-  maxInstances: 1
+  # The amount of CPU available for each instance.
+  # Valid values are: 1, 2, 4
+  cpu: 1
+  # The amount of memory available for each instance.
+  # Valid values are: "512Mi", "1Gi", "2Gi", "4Gi"
+  memoryMiB: 512
+  # The number of concurrent requests each instance can handle.
+  # Valid values are between 1 and 1000.
+  concurrency: 80
+  # The number of backend instances that will be running at all times.
+  minInstances: 0
+  # The maximum number of backend instances that can be running at once.
+  # This can be used to control costs.
+  maxInstances: 2
